Added new strings and colors to the app. Added new class - HelpActivity.java

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/paintbackground"
     tools:context="edu.orangecoastcollege.cs273.pdavis11.paintestimator.MainActivity">
 
+
     <TextView
+        android:id="@+id/paintEstimatorBannerTextView"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:text="@string/app_name" />
+
+    <TextView
+        android:id="@+id/dimensionsBannerTextView"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:text="@string/enter_dimensions"
+        android:layout_below="@+id/paintEstimatorBannerTextView"
+        android:layout_alignLeft="@+id/paintEstimatorBannerTextView"
+        android:layout_alignStart="@+id/paintEstimatorBannerTextView" />
+
+    <TextView
+        android:id="@+id/lengthTextView"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/dimensionsBannerTextView"
+        android:layout_toLeftOf="@+id/lengthEditText"
+        android:layout_toStartOf="@+id/lengthEditText"
+        android:gravity="center"
+        android:text="@string/length" />
+
+    <EditText
+        android:id="@+id/lengthEditText"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_alignEnd="@+id/dimensionsBannerTextView"
+        android:layout_alignRight="@+id/dimensionsBannerTextView"
+        android:layout_below="@+id/widthEditText"
+        android:inputType="numberDecimal"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/widthEditText"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_below="@+id/dimensionsBannerTextView"
+        android:layout_toEndOf="@+id/lengthTextView"
+        android:layout_toRightOf="@+id/lengthTextView"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:text="" />
+
+    <TextView
+        android:id="@+id/widthTextView"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_alignLeft="@+id/lengthTextView"
+        android:layout_alignStart="@+id/lengthTextView"
+        android:layout_below="@+id/lengthTextView"
+        android:gravity="center"
+        android:text="@string/width" />
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignLeft="@+id/heightTextView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/heightTextView"
+        android:layout_marginBottom="94dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:onClick="computeGallons"
+        android:text="@string/compute_button_text" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/heightTextView"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_alignLeft="@+id/widthTextView"
+        android:layout_alignStart="@+id/widthTextView"
+        android:layout_below="@+id/lengthEditText"
+        android:gravity="center"
+        android:text="@string/height" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/help_button_text"
+        android:onClick="goToHelp"
+        android:layout_alignBaseline="@+id/button"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:layout_marginLeft="9dp"
+        android:layout_marginStart="9dp" />
+
+    <EditText
+        android:id="@+id/heightEditText"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_alignBaseline="@+id/heightTextView"
+        android:layout_alignBottom="@+id/heightTextView"
+        android:layout_toEndOf="@+id/widthTextView"
+        android:layout_toRightOf="@+id/widthTextView"
+        android:ems="10"
+        android:inputType="numberDecimal" />
+
+    <EditText
+        android:id="@+id/windowsEditText"
+        android:layout_width="150sp"
+        android:layout_height="45dp"
+        android:layout_above="@+id/button"
+        android:layout_alignEnd="@+id/heightEditText"
+        android:layout_alignRight="@+id/heightEditText"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginRight="9dp"
+        android:ems="10"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/doorsEditText"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:layout_above="@+id/windowsEditText"
+        android:layout_alignLeft="@+id/windowsEditText"
+        android:layout_alignStart="@+id/windowsEditText"
+        android:ems="10"
+        android:inputType="number" />
+
+    <TextView
+        android:id="@+id/windowsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/windowsEditText"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button"
+        android:text="@string/windows" />
+
+    <TextView
+        android:id="@+id/doorsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/windowsEditText"
+        android:layout_alignLeft="@+id/windowsTextView"
+        android:layout_alignStart="@+id/windowsTextView"
+        android:text="@string/doors" />
+
+    <TextView
+        android:id="@+id/enterDoorWindowTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/doorsEditText"
+        android:layout_centerHorizontal="true"
+        android:text="@string/enter_door_window" />
+
+    <TextView
+        android:id="@+id/gallonsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:text="@string/gallons"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
