Updated gradle versioning. Changed to constraint layout from relative layout. Removed redundant variables.

--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="edu.orangecoastcollege.cs273.pdavis11.paintestimator.HelpActivity">
@@ -35,4 +35,4 @@
         android:layout_marginTop="10dp"
         android:layout_below="@+id/returnButton"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
