--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,9 +13,30 @@
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:gravity="center"
         android:textColor="#000000"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/helpTextView"
+        android:layout_width="300dp"
+        android:layout_height="460dp"
+        android:layout_below="@+id/returnButton"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical|fill_vertical"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/help_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/returnButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/returnButton"
@@ -22,17 +44,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/estimatedPaintTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="33dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="92dp"
+        android:onClick="goToMainActivity"
         android:text="@string/return_btn"
-        android:onClick="goToMainActivity"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/estimatedPaintTextView" />
 
-    <TextView
-        android:id="@+id/helpTextView"
-        android:layout_width="300dp"
-        android:layout_height="460dp"
-        android:layout_gravity="center_vertical|fill_vertical"
-        android:text="@string/help_text"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/returnButton"
-        android:layout_centerHorizontal="true" />
 </android.support.constraint.ConstraintLayout>
